--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,12 @@ body{
     width: 100%;
     height: 100vh;
     margin: 0 auto;
-    background-image: url('./img/test_bg.jpg');
-    background-size: cover;
-    background-position: center;
 }
-
+img{
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
 
 .button{
    position: absolute;
@@ -56,19 +57,19 @@ body{
     
 }
 .one{
-    top: 49%;
+    top: 43%;
     left:35%;
     background-color: #6ABF4B;
     border:1px solid #6ABF4B;
 }
 .two{
-    top: 40%;
+    top: 35%;
     left: 60%;
     background-color: #6ABF4B;
     border:1px solid #6ABF4B;
 }
 .three{
-    top: 77%;
+    top: 84%;
     left: 60%;
     background-color: #6ABF4B;
     border:1px solid #6ABF4B;
@@ -80,19 +81,19 @@ body{
     border:1px solid #6ABF4B;
 }
 .five{
-    top: 25%;
+    top: 23%;
     left: 26%;
     background-color: #3877EE;
     border:1px solid #3877EE;
 }
 .six{
-    top: 17%;
+    top: 13%;
     left: 72%;
     background-color: #3877EE;
     border:1px solid #3877EE;
 }
 .seven{
-    top: 45%;
+    top: 43%;
     left: 74%;
     background-color: #3877EE;
     border:1px solid #3877EE;
